feat: Planning BC 도메인 모델링 및 Timetable 동기화 구현
- DailyPlan/Task/TopPickDetail 도메인 모델 및 Timetable/Slot 도메인 모델 구현
- AbstractAggregateRoot를 Spring Data @DomainEvents 패턴으로 전환
- 도메인 이벤트 기반 크로스 AR 통신 (DailyPlanCreated, SlotRescheduled, TaskTopPicked, TaskTopPickUnpicked)
- TopPick 선정/해제 시 Timetable의 topPickTotal 및 Slot.topPick 플래그 자동 동기화
- 커스텀 예외 체계 적용 (ErrorCode enum 기반 7개 예외 클래스)
- Timetable application/presentation 레이어 구현 (6개 서비스, 5개 API 엔드포인트)
- Timetable 서비스 유닛 테스트 22개 케이스 작성

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>